Container work